2010-04-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* custom.el (defcustom): Add edebug spec.

2010-04-18  Juri Linkov  <juri@jurta.org>

	Test for special mode-class in view-buffer instead of view-file (bug#5513).

	* view.el (view-file, view-buffer): Move test for special mode-class
	from view-file to view-buffer.

	* tar-mode.el (tar-extract): Turn if's into one cond
	like in arc-mode.el.

2010-04-18  Juri Linkov  <juri@jurta.org>

	Add 7z archive format support (bug#5475).

	* arc-mode.el (archive-zip-extract): Try to find 7z executable.
	(archive-7z-extract): New defcustom.
	(archive-find-type): Add magic string for 7z.
	(archive-extract-by-stdout): Add new optional arg `stderr-file'.
	If `stderr-file' is non-nil, use `(t stderr-file)' for the
	`buffer' arg of `call-process'.
	(archive-zip-extract): Check `archive-zip-extract' for "7z" and
	call the function `archive-7z-extract' with the variable
	`archive-7z-extract' let-bound to `archive-zip-extract'.
	(archive-7z-summarize, archive-7z-extract): New functions.

	* international/mule.el (auto-coding-alist):
	* files.el (auto-mode-alist): Add 7z file extension.

2010-04-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* loadup.el: Setup hash-cons for pure data.

	Fix duplicate entries in cedet's loaddefs.el files.
	* emacs-lisp/autoload.el (autoload-file-load-name): Be more clever.
	Should make most file-local generated-autoload-file unnecessary.
	(print-readably): Silence warnings.
	(autoload-find-destination): Take load-name as an arg to make sure
	it's the same as the one that will be in the file.
	(autoload-generate-file-autoloads): Adjust to above changes.
	Try to make the dataflow a bit simpler.

	* cvs-status.el (cvs-refontify): Remove unused.

2010-04-18  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc.el (calc-mode-map): Bind "O" to `calc-missing-key'.

	* calc-bin.el (calc-radix): Have the "O" option turn on
	twos-complement mode.

2010-04-17  Jay Belanger  <jay.p.belanger@gmail.com>
